# anvil

./: .gitignore  CMakeLists.txt  COMPILER_VM_BRIDGE.md  Cargo.toml  IMMEDIATE_IMPLEMENTATION.md  LEXER-TESTING.md  LOOKUP_PRIMITIVE_IMPLEMENTATION.md  README.md  forth-test.sh  run-tests.sh
docs/: aot.md  architecture.md  parser.md  project.md
examples/: gcd.fth  math.fth
forth/: repl.fth  stdlib.fth  testing.fth
forth/stdlib/: 00-stack.fth  10-arithmetic.fth  20-comparison.fth  22-arithmetic-extended.fth  25-stack-advanced.fth  30-memory.fth  40-strings.fth  50-io.fth  60-parsing.fth  README.md
forth/tests/: arithmetic.fth  bitwise.fth  comparison.fth  run-all.fth  stack.fth
src/: aot.rs  aot_compiler.h  ast.h  boot.fth  bootstrap.rs  bytecode.rs  bytecode_compiler.rs  bytecode_format.md  codegen.fth  compiler.h  compiler.rs  core.fth  dictionary.cpp  dictionary.h  execute_helper.rs  execution_context_layout.h  execution_engine.cpp  execution_engine.h  forth-compiler.fth  interpreter.rs  jit.rs  lexer.fth  lexer.rs  lib.rs  llvm_jit.rs  llvm_primitives.rs  main.cpp  main.rs  meta-compiler.fth  metacompiler.fth  minimal_meta.fth  number_parser.cpp  number_parser.h  parser.fth  parser.h  parser.rs  primitives.h  primitives.rs  primitives.rs.bak  primitives_registry.cpp  (+7 more)
tests/: arithmetic.fth  base.fth  chars.fth  compare.fth  forth_tests.rs  lexer-forth-tests.fth  memory.fth  parser-forth-tests.fth  run-all.fth  stack.fth  test_ast.cpp  test_compiler.cpp  test_compiler.rs  test_dictionary.cpp  test_emit.cpp  test_forth_lexer_integration.rs  test_forth_parser_integration.rs  test_helpers.h  test_input_buffer.cpp  test_interpreter.cpp  test_lexer.rs  test_llvm_basic.rs  test_llvm_integration.rs  test_parser.cpp  test_parser.rs  test_primitives.cpp  test_primitives.rs  test_stdlib.cpp  test_string_primitives.cpp  test_terminal.cpp  test_variables.cpp  testing.fth
