[package]
name = "anvil"
version = "0.1.0"
edition = "2024"

[lib]
name = "forth"
path = "src/lib.rs"

[[bin]]
name = "forth"
path = "src/main.rs"

[dependencies]
rustyline = "17.0"
dirs = "5.0"
cranelift = "0.115"
cranelift-jit = "0.115"
cranelift-module = "0.115"
cranelift-native = "0.115"
cranelift-object = "0.115"
cranelift-frontend = "0.115"
target-lexicon = "0.12"
