[package]
name = "anvil"
version = "0.1.0"
edition = "2024"

[lib]
name = "forth"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "anvil"
path = "src/main.rs"

[[bin]]
name = "anvilc"
path = "src/aot.rs"

[dependencies]
rustyline = "17.0"
dirs = "5.0"
inkwell = { version = "0.6.0", features = ["llvm18-1"] }
lazy_static = "1.5"
